--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ edition = "2018"
 anyhow = "*"
 log = "*"
 env_logger = "*"
+
+[[bin]]
+name = "synacor"
+path = "src/synacor/main.rs"
+
+[[bin]]
+name = "checker"
+path = "src/checker/main.rs"
